# icfp-2023-inference-tricks

./: LICENSE  Makefile  README.md  icfp2023-inference-tricks.cabal
example/: fundep.hs
example/effects/: Effects.hs
example/explicit/: Explicit.hs
example/fundep/: Fundep.hs
example/imp-proof/: ImpProof.hs
example/no-inference/: NoInference.hs
example/the-proof/: TheProof.hs
src/: Dict.hs  Imp.hs  The.hs
