cabal-version:      3.0
name:               icfp2023-inference-tricks
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Armando Ramirez
maintainer:         armando.m.ramirez@gmail.com
-- copyright:
category:           Tricks
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Imp, The
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, cleff
    hs-source-dirs:   src
    default-language: GHC2021

executable icfp2023-inference-tricks
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        icfp2023-inference-tricks

    hs-source-dirs:   exe
    default-language: GHC2021
