cabal-version:      3.0
name:               icfp2023-inference-tricks
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Armando Ramirez
maintainer:         armando.m.ramirez@gmail.com
-- copyright:
category:           Tricks
build-type:         Simple
extra-doc-files:    CHANGELOG.md

library
    exposed-modules:  Imp, The
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, cleff
    hs-source-dirs:   src
    default-language: GHC2021

library no-inference
    exposed-modules: NoInference
    build-depends:
        base ^>=4.16.4.0,
        icfp2023-inference-tricks,
        cleff

    hs-source-dirs:   example/no-inference
    default-language: GHC2021

library fundep
    exposed-modules: Fundep
    build-depends:
        base ^>=4.16.4.0,
        icfp2023-inference-tricks,
        cleff

    hs-source-dirs:   examples/fundep
    default-language: GHC2021

library effects
    exposed-modules: Effects
    build-depends:
        base ^>=4.16.4.0,
        icfp2023-inference-tricks,
        cleff

    hs-source-dirs:   example/effects
    default-language: GHC2021

library explicit
    exposed-modules: Explicit
    build-depends:
        base ^>=4.16.4.0,
        icfp2023-inference-tricks,
        cleff

    hs-source-dirs:   example/explicit
    default-language: GHC2021


library the-proof
    exposed-modules: TheProof
    build-depends:
        base ^>=4.16.4.0,
        icfp2023-inference-tricks,
        cleff

    hs-source-dirs:   example/the-proof
    default-language: GHC2021

library imp-proof
    exposed-modules: ImpProof
    build-depends:
        base ^>=4.16.4.0,
        icfp2023-inference-tricks,
        cleff

    hs-source-dirs:   example/imp-proof
    default-language: GHC2021
